mainMenu implemented finally

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 /* CSS VARIABLES */
 html {
-  --header-hight: 3.5rem;
+  --header-height: 3.5rem;
   --little-menu-width: 5rem;
   --main-menu-width: 15rem;
   --menu-item-gap: 1.3rem;
