--- a/src/index.css
+++ b/src/index.css
@@ -53,11 +53,11 @@ body::-webkit-scrollbar-thumb:hover {
   background: #555555;
 }
 
-.open {
+.fade-enter-active {
   animation: openMenu 0.15s ease-in forwards;
 }
 
-.close {
+.fade-exit-active {
   animation: closeMenu 0.15s ease-in forwards;
 }
 
@@ -75,5 +75,31 @@ body::-webkit-scrollbar-thumb:hover {
   }
   100% {
     transform: translateX(-100%);
+  }
+}
+
+.open-backdrop {
+  animation: showBackdrop 2s linear forwards;
+}
+.hide-backdrop {
+  animation: hideBackdrop 2s linear forwards;
+}
+
+@keyframes showBackdrop {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes hideBackdrop {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
   }
 }
